add list/sdapi/functions interface
